samples/_failures_safe/1761352433_1505aa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7e58a9b5.c: In function ‘main’:
./samples/SAFE/__tmp_7e58a9b5.c:178:5: error: expected declaration or statement at end of input
  178 |     size_t len = strlen(input);
      |     ^~~~~~
